# Python-Herzen-Course

./: .gitignore  README.md
ЛР-1/: 3.1.py  3.2.py  calculate.py  guess_game.py  Сибилев А.И. гр 1, п.гр 1, ЛР-1.docx
ЛР-2/: 2.1_enclosure func.py  2.2_decorators.py  2.3_carrying.py  2.4_unit_tests.py  README.md  pytests.py
ЛР-3/: README.md  calculator_with_tolerance.py  test_calculator.py
ЛР-4/: Python_test_email.eml  README.md  memoization.py  send_email.py  soup_program.py  test_memoization.py  test_two_sum.py  two_sum_f.py  two_sum_fast_all_f.py  two_sum_fast_f.py
ЛР-5/: BatchCalculatorContextManager.py  README.md  country_city.py  fib_iter.py  mongodb_manager.py  random_interato_class.py  random_interato_func.py  time_manager.py
ЛР-6/: BatchCalculatorContextManager.py  README.md  test_batch_calc_pytest.py  test_batch_calc_unittest.py
ЛР-7/: README.md  (+4 more)
Семестр-5/LR-5/: README.md  pyproject.toml
Семестр-5/LR-5/glossary_project/: Dockerfile  alembic.ini  docker-compose.yml  generate_proto.sh  glossary.db  requirements.txt
Семестр-5/LR-5/glossary_project/app/: crud.py  main.py  models.py  schemas.py
Семестр-5/LR-5/glossary_project/app/api/: routers.py
Семестр-5/LR-5/glossary_project/app/db/: session.py
Семестр-5/LR-5/glossary_project/app/grpc/: glossary_pb2.py  glossary_pb2_grpc.py
Семестр-5/LR-5/glossary_project/app/grpc_server/: server.py
Семестр-5/LR-5/glossary_project/proto/: glossary.proto
Семестр-6/LR-2/cython_integrator/: main.py  pyproject.toml  setup.py
Семестр-6/LR-2/cython_integrator/src/: integrate.c  integrate.pyx
(+234 files in other folders)
