[project]
name = "cython-integrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cython>=3.2.4",
    "setuptools>=82.0.1",
]

[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"